# cryptosync

./: CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
include/: FileSystemWatcher.h
src/: CmakeLists.txt  FileSystemWatcher.cpp  FileSystemWatcher.h  main.cpp
